同样是与jsf_database_project一样的项目，是在jsf_database_project这个项目上整合了jsf与spring的框架

--- a/JSF_Spring/web/error.xhtml
+++ b/JSF_Spring/web/error.xhtml
@@ -6,9 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form>
-            <h:commandButton value="find" action="#{user.find()}"></h:commandButton>
-        </h:form>
+        <h1>这是error页面 ERROR 没有找到数据！！！</h1><hr/>
     </h:body>
 </html>
 
